doc(node): add tutorial for building the event monitor